[package]
name = "read_odroid_gps"
version = "0.1.0"
authors = ["Christopher Moran <christophermoran@ucsb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0"
nmea = {git = "https://github.com/AeroRust/nmea.git"}